<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="E_AlarmLevel" Id="{38e28fc7-5c6d-0ccd-0993-b43dee03152c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AlarmLevel :
(
	NONE,
	INFO,
	WARNING,
	ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>